--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <!-- header is full width -->
-    <header class="bg-dark text-white text-center p-2">
+    <header class="bg-primary text-white text-center p-2">
         <h1>Weather Forecast</h1>
     </header>
     <!-- search bar container-->
