added variables, get and save city functions

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
                 <div class="card" id="city-search-form">
                 <h2>Find Location</h2>
                 <form class="card-body" id="city-search-form">
-                    <input id=city type="text" class="form-input"/>
+                    <input id="city" type="text" class="form-input"/>
                     <button id="btn btn-primary" type="submit">Search</span>
                     </button>
                 </form>
-                <div id="past-search border" id="past-history-buttons"></div>
+                <div id="past-search border" id="past-search-buttons"></div>
                     <h3 class="card-header">Location History</h3>
                 </div>  
             </div>            
@@ -41,7 +41,7 @@
                 </div>
             </div>
             <div class="row border" id="five-day-forecast">
-                <h2 class="col-12" id="future-forecast"></h2>
+                <h2 class="col-12" id="forecast"></h2>
                 <h3>Five Day</h3>
                 <div class="d-flex" id="fiveday-container"></div>
             </div>
