debugging API call

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <div class="row">
                     <h4 class="ml-2">
                         <img class="weather-icon" id="today-icon" />
-                        <span class="align-middle" id="city-name">City Name</span>
+                        <span class="align-middle city-forecast" id="city-name">City Name</span>
                     </h4>
                 </div>
                 <div class="row">
