--- a/index.html
+++ b/index.html
@@ -28,14 +28,13 @@
                 <div id="city-search-container" class="card">
                     <div id="city-search" class="card-body">
                     <input id="city-input" type="text" class="form-input input-group-text col-9 mr-2" name="city" />
-                    <button type="button" id="search-btn" class="btn btn-info"><i class="fas fa-search"></i></button>
+                    <button type="button" id="search-btn" class="btn btn-info">Search</button>
                     </button>
                 </div>
     
         <!-- city search history -->
-                <div class="card bg-color-light mt-4">
+                <div class="card bg-color-light mt-4" id="past-searches">
                     <h3 class="card-header">Location History</h3>
-                    <div id="past-searches" class="input-group m-5"></div>
                 </div>  
             </div> 
         </div>          
@@ -60,7 +59,7 @@
                         <p class="pl-3">High: <span id="current-high"></span> &deg;F</p>
                         <p class="pl-3">Low: <span id="current-low"></span> &deg;F</p>
                         <p class="pl-3">Wind Speed: <span id="current-wind-speed"></span> MPH</p>
-                        <p class="pl-3">UV Index: <span id="current-uvi"></span></p>
+                        <p class="pl-3">UV Index: <span id="current-uv"></span></p>
                     </div>
                 </div>
             </div>
