--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Weather Forecast</title>
 
@@ -14,8 +16,8 @@
     <!-- header is full width -->
     <header class="bg-primary text-white text-center p-2">
         <nav class="">
-        <h1><i class="ml-3 fas fa-could-sun mr-2"></i> Weather Forecast</h1>
-    </nav>
+            <h1><i class="ml-3 fas fa-could-sun mr-2"></i> Weather Forecast</h1>
+        </nav>
     </header>
 
     <!-- search bar container-->
@@ -26,7 +28,7 @@
                     <!-- search for city -->
                     <div class="form-input">
                         <label for="city-name" class="">City Search</label>
-                        <input type="text" class="" id="city-name" placeholder="City Name">
+                        <input type="text" class="form-control" id="city-name" placeholder="City Name">
                         <button id="search-btn" type="button" class="btn btn-secondary">Search</button>
                         <span class="line-spacing"></span>
                     <!-- past city search container -->
