adding enter click function

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-3">
-                <form>
+                <form id="display-weather">
                     <!-- search for city -->
                     <div class="form-input">
                         <label for="city-name">City Search</label>
