--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <div class="form-input">
                         <label for="city-name">City Search</label>
                         <input type="text" class="form-control" id="city-name" placeholder="City Name">
-                        <button id="search-btn" type="button" class="btn btn-outline-primary">Search</button>
+                        <button id="search-btn" type="submit" class="btn btn-outline-primary">Search</button>
                         <span class="dividing-line"></span>
                     <!-- past city search container -->
                     <ul id="search-history" class="list-group"></ul>
